Running Leafnode cleanup scripts across our code base.
issue: BMS-1004
reviewer: LisaQ